# stanford_compression_library

./: .gitignore  .gitmodules  FSE_PROJECT_README.md  Makefile  README.md  get_my_files.py  my_files.txt  project_milestone.md  run.sh  run_fse_tests.sh  setup.py
FiniteStateEntropy/programs/: Makefile  fullbench.c  scl_fse_wrapper.cpp  scl_fse_wrapper.h
benchmark/: benchmark_fse.py  dataset_utils.py
cpp/: CMakeLists.txt  README.md
cpp/bench/: bench_fse.cpp
cpp/include/scl/fse/: bitio.hpp  frame.hpp  fse.hpp  levels.hpp
cpp/src/: decode_disasembly.c  frame.cpp  fse.cpp  main.cpp  pybind_module.cpp
final_report/: main.tex  neurips_2024.sty  references.bib
lzbench/: Makefile
lzbench/bench/: codecs.h  lz_codecs.cpp  lz_fse_scl.cpp  lzbench.h
poster/: main.tex
scl/benchmark/: benchmark_fse.py  dataset_utils.py
scl/compressors/: fse copy.py  fse.py  test_fse.py
scl/external_compressors/: fse_cpp_wrapper.py
scl/tests/: benchmark_fse.py  conftest.py
scl/tests/integration/: test_fse_cpp_parity.py  test_fse_cpp_sanity.py  test_fse_cpp_suite.py  test_fse_end_to_end.py
scl/tests/unit/: test_fse_normalization.py  test_fse_symbol_ops.py  test_fse_tables.py  test_levels.py
scripts/: parse_fullbench.py
tests/: __init__.py  debug_utils.py
tests/integration/: __init__.py  test_fse_end_to_end.py
tests/unit/: __init__.py  test_fse_spreading.py  test_fse_symbol_ops.py  test_fse_tables.py
