cmake_minimum_required(VERSION 3.16)
project(scl_fse_cpp LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

option(SCL_FSE_BUILD_EXAMPLE "Build the small FSE example binary" ON)
option(SCL_FSE_BUILD_PYBIND "Build the pybind11 module" ON)
option(SCL_FSE_BUILD_BENCH "Build the native benchmarking binary" ON)
option(SCL_FSE_BENCH_ZSTD "Enable zstd in benchmarks if found" ON)
option(SCL_FSE_BENCH_ZLIB "Enable zlib in benchmarks if found" ON)
option(SCL_FSE_BENCH_LZ4 "Enable lz4 in benchmarks if found" ON)

add_library(scl_fse STATIC
    src/fse.cpp
)

target_include_directories(scl_fse
    PUBLIC
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
        $<INSTALL_INTERFACE:include>
)

message(STATUS "CMAKE_BUILD_TYPE: ${CMAKE_BUILD_TYPE}")

if(CMAKE_BUILD_TYPE STREQUAL "Release")
    target_compile_options(scl_fse PRIVATE -O3 -DNDEBUG -march=native)
endif()

if(SCL_FSE_BUILD_EXAMPLE)
    add_executable(fse_example src/main.cpp)
    target_link_libraries(fse_example PRIVATE scl_fse)
endif()

if(SCL_FSE_BUILD_PYBIND)
    find_package(pybind11 CONFIG QUIET)
    if(pybind11_FOUND)
        pybind11_add_module(scl_fse_cpp src/pybind_module.cpp)
        target_link_libraries(scl_fse_cpp PRIVATE scl_fse)
        target_compile_definitions(scl_fse_cpp PRIVATE PY_SSIZE_T_CLEAN)
    else()
        message(STATUS "pybind11 not found; skipping Python module (set SCL_FSE_BUILD_PYBIND=OFF to silence).")
    endif()
endif()

include(CheckIncludeFile)

function(scl_try_add_imported target_name lib_var inc_var)
    if(${lib_var} AND ${inc_var})
        add_library(${target_name} UNKNOWN IMPORTED)
        set_target_properties(${target_name} PROPERTIES
            IMPORTED_LOCATION "${${lib_var}}"
            INTERFACE_INCLUDE_DIRECTORIES "${${inc_var}}")
        return()
    endif()
endfunction()

if(SCL_FSE_BUILD_BENCH)
    add_executable(bench_fse bench/bench_fse.cpp)
    target_link_libraries(bench_fse PRIVATE scl_fse)
    target_include_directories(bench_fse PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
    if(CMAKE_BUILD_TYPE STREQUAL "Release")
        target_compile_options(bench_fse PRIVATE -O3 -DNDEBUG -march=native)
    endif()

    if(SCL_FSE_BENCH_ZSTD)
        find_package(ZSTD QUIET CONFIG)
        if(ZSTD_FOUND AND TARGET ZSTD::ZSTD)
            target_link_libraries(bench_fse PRIVATE ZSTD::ZSTD)
            target_compile_definitions(bench_fse PRIVATE SCL_BENCH_HAVE_ZSTD=1)
        else()
            # Fallback: try to locate zstd via find_library/find_path (e.g., Homebrew)
            find_library(ZSTD_LIB zstd)
            find_path(ZSTD_INCLUDE NAMES zstd.h PATH_SUFFIXES zstd)
            if(ZSTD_LIB AND ZSTD_INCLUDE)
                scl_try_add_imported(ZSTD::ZSTD ZSTD_LIB ZSTD_INCLUDE)
                target_link_libraries(bench_fse PRIVATE ZSTD::ZSTD)
                target_compile_definitions(bench_fse PRIVATE SCL_BENCH_HAVE_ZSTD=1)
                message(STATUS "ZSTD found via fallback: ${ZSTD_LIB}")
            else()
                message(STATUS "ZSTD not found; zstd benchmarks will be skipped. Install e.g. 'brew install zstd'.")
            endif()
        endif()
    endif()

    if(SCL_FSE_BENCH_ZLIB)
        find_package(ZLIB QUIET)
        if(ZLIB_FOUND AND TARGET ZLIB::ZLIB)
            target_link_libraries(bench_fse PRIVATE ZLIB::ZLIB)
            target_compile_definitions(bench_fse PRIVATE SCL_BENCH_HAVE_ZLIB=1)
            message(STATUS "ZLIB found: using imported target ZLIB::ZLIB")
        else()
            find_library(ZLIB_LIB z)
            find_path(ZLIB_INCLUDE zlib.h)
            if(ZLIB_LIB AND ZLIB_INCLUDE)
                scl_try_add_imported(ZLIB::ZLIB ZLIB_LIB ZLIB_INCLUDE)
                target_link_libraries(bench_fse PRIVATE ZLIB::ZLIB)
                target_compile_definitions(bench_fse PRIVATE SCL_BENCH_HAVE_ZLIB=1)
                message(STATUS "ZLIB found via fallback: ${ZLIB_LIB}")
            else()
                message(STATUS "ZLIB not found; zlib benchmarks will be skipped. Install e.g. Xcode CLT or 'brew install zlib'.")
            endif()
        endif()
    endif()

    if(SCL_FSE_BENCH_LZ4)
        find_package(LZ4 QUIET CONFIG)
        if(LZ4_FOUND AND TARGET LZ4::lz4)
            target_link_libraries(bench_fse PRIVATE LZ4::lz4)
            target_compile_definitions(bench_fse PRIVATE SCL_BENCH_HAVE_LZ4=1)
        else()
            find_library(LZ4_LIB lz4)
            find_path(LZ4_INCLUDE lz4.h)
            if(LZ4_LIB AND LZ4_INCLUDE)
                scl_try_add_imported(LZ4::lz4 LZ4_LIB LZ4_INCLUDE)
                target_link_libraries(bench_fse PRIVATE LZ4::lz4)
                target_compile_definitions(bench_fse PRIVATE SCL_BENCH_HAVE_LZ4=1)
                message(STATUS "LZ4 found via fallback: ${LZ4_LIB}")
            else()
                message(STATUS "LZ4 not found; lz4 benchmarks will be skipped. Install e.g. 'brew install lz4'.")
            endif()
        endif()
    endif()
endif()
